lavorando su PSR

--- a/views/header.html
+++ b/views/header.html
@@ -40,7 +40,7 @@
             <!-- Lingue -->
 
             <!-- Login -->
-            <div class="dropdown navbar-user acauth flex-item"></div>
+            <div class="dropdown navbar-user acAuth flex-item"></div>
 
             <!-- button toggle for responsive standard on #header-navbar -->
             <!--<div class="flex-item">
