--- a/views/header2.html
+++ b/views/header2.html
@@ -1,4 +1,4 @@
-<header id="header" class="fixed-top">
+<header id="header" class="">
     <div class="container">
         <div class="row">
             <nav class="col-12 navbar navbar-expand-lg">
@@ -81,3 +81,5 @@
         </div>
     </div>
 </div>
+
+
