--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,30 @@
 @charset "UTF-8";
+/*
+=====================================================================
+
+import font from google
+
+=====================================================================
+*/
 :root {
   --font-size--small: calc((14/16) * 1rem);
   /* 14px */
   --font-size--default: calc((16/16) * 1rem);
   /* 16px */
   --font-size--large: calc((24/16) * 1rem);
-  /* 24px */ }
+  /* 24px */
+}
 
- 
-.font-size--small {
-  font-size: var(--font-size--small); }
+  .font-size--small {
+  font-size: var(--font-size--small);
+}
 
 .font-size--default {
-  font-size: var(--font-size--default); }
+  font-size: var(--font-size--default);
+}
 
 .font-size--large {
-  font-size: var(--font-size--large); }
+  font-size: var(--font-size--large);
+}
+
+/*# sourceMappingURL=style.css.map */
