--- a/views/prj.html
+++ b/views/prj.html
@@ -1,7 +1,17 @@
 <!--<div class="block block&#45;&#45;kredit" >
     <img src="img/psr.jpg" alt="">
 </div>-->
-<figure class="figure">
-    <img src="img/psr.jpg" class="figure-img img-fluid rounded" alt="...">
-    <figcaption class="figure-caption">A caption for the above image.</figcaption>
-</figure>
+
+<div class="modal fade" id="prjModal" tabindex="-1" role="dialog" aria-labelledby="prjModal" aria-hidden="true"  >
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+
+            <div class="modal-body">
+                <figure class="figure">
+                    <img src="img/psr.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+</div>
