--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*
 =====================================================================
 
@@ -6,6 +5,11 @@ import font from google
 
 =====================================================================
 */
+@import url("//fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300, 400, 400i, 700");
+body, html {
+  font: 300 20px "Barlow Semi Condensed", sans-serif;
+}
+
 :root {
   --font-size--small: calc((14/16) * 1rem);
   /* 14px */
@@ -15,7 +19,7 @@ import font from google
   /* 24px */
 }
 
-  .font-size--small {
+.font-size--small {
   font-size: var(--font-size--small);
 }
 
@@ -25,6 +29,38 @@ import font from google
 
 .font-size--large {
   font-size: var(--font-size--large);
+}
+
+/*
+=====================================================================
+* Element parts *
+=====================================================================
+*/
+header, footer {
+  background: #a0c2dd;
+}
+
+variable-chooser, cesium, chart, dock,
+header, main, footer {
+  border: none;
+}
+
+.site__logo--project {
+  background-image: url("../img/logo-regione.svg");
+  height: 64px;
+  width: 64px;
+}
+.site__logo--media {
+  filter: invert(0.3);
+}
+.site__logo--title {
+  color: #d53429;
+  font-family: "Barlow Semi Condensed";
+}
+
+.lv2_box_map_command {
+  left: 50px;
+  margin-top: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
