lavorando su PSR

--- a/views/footer2.html
+++ b/views/footer2.html
@@ -2,7 +2,7 @@
 <footer class="footer {{currentOs.phase.idfase}} d-flex justify-content-between align-items-center">
 <!--    <div ng-click="iconize = !iconize" >-->
 <!--        ng-if="isfireApp"-->
-        <button class="btn btn-info btn--kredit"
+        <button class="btn btn-info btn-light btn--kredit"
                 type="button"
                 data-toggle="modal"
                 data-target="#prjModal">
@@ -11,11 +11,13 @@
         <div ng-include="'views/prj.html'" ></div>
 <!--    ng-if="iconize" ng-style="(!iconize)?{}:{}"-->
     </div>
-    <ac-date ng-show="acSession.authenticated"></ac-date>
-    <img class="mx-2" src="img/acrotec_png.png" alt="">
-    <img class="mx-2" src="img/cima_png.png" alt="">
-    <!--<div class="flex-item m-l-20 block">
-    </div>-->
+    <ac-date class="w-100 text-center" ng-show="acSession.authenticated"></ac-date>
+    <div class="media flex-shrink-1">
+        <img class="mx-2 align-self-center img-thumbnail w-25" src="img/acrotec_png.png" alt="">
+        <img class="mx-2 align-self-center img-thumbnail w-25" src="img/cima_png.png" alt="">
+        <!--<div class="flex-item m-l-20 block">
+        </div>-->
+    </div>
 
     <os-view-form></os-view-form>
 </footer>
