--- a/views/footer2.html
+++ b/views/footer2.html
@@ -1,5 +1,5 @@
 
-<footer class="footer {{currentOs.phase.idfase}} d-flex justify-content-between align-items-center">
+<footer class="footer {{currentOs.phase.idfase}} d-flex justify-content-around align-items-center">
 <!--    <div ng-click="iconize = !iconize" >-->
 <!--        ng-if="isfireApp"-->
         <button class="btn btn-info btn-light btn--kredit"
@@ -12,7 +12,7 @@
 <!--    ng-if="iconize" ng-style="(!iconize)?{}:{}"-->
     </div>
     <ac-date class="w-100 text-center" ng-show="acSession.authenticated"></ac-date>
-    <div class="media flex-shrink-1">
+    <div class="media flex-shrink-1 ml-auto">
         <img class="mx-2 align-self-center img-thumbnail w-25" src="img/acrotec_png.png" alt="">
         <img class="mx-2 align-self-center img-thumbnail w-25" src="img/cima_png.png" alt="">
         <!--<div class="flex-item m-l-20 block">
