--- a/css/style.scss
+++ b/css/style.scss
@@ -33,6 +33,18 @@ body, html  {
 
 /*
 =====================================================================
+* Reset struct *
+=====================================================================
+*/
+
+
+
+variable-chooser, cesium, chart, dock,
+header, main, footer {border:none;}
+
+
+/*
+=====================================================================
 * Element parts *
 =====================================================================
 */
@@ -43,8 +55,14 @@ header, footer {
   background: $primaryColor;
 
 }
-variable-chooser, cesium, chart, dock,
-header, main, footer {border:none;}
+
+
+/*
+=====================================================================
+* LIVE & SENTINEL *
+=====================================================================
+*/
+
 
 .site__logo {
   &--project {
@@ -60,4 +78,12 @@ header, main, footer {border:none;}
   margin-top: 10px;
 }
 
+
+
+
+/*
+=====================================================================
+* KUMALE *
+=====================================================================
+*/
 
